Revert "Fix service areas dropdown: hide on mobile, show 3-column layout on desktop"
This reverts commit 9a4c1301e6c7628faba3e6308873942856ef895b.

--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -124,10 +124,6 @@ nav {
           display: flex;
           flex-direction: column;
           gap: 1rem;
-          /* Hide Service Areas submenu on mobile */
-          &:has(> a[href="/service-areas/"]) ul {
-            display: none;
-          }
           ul {
             display: flex;
             flex-direction: column;
@@ -214,19 +210,6 @@ nav {
               li,
               li a {
                 display: block;
-              }
-              /* 3-column layout for Service Areas dropdown */
-              &:has(li a[href*="/pages/"]) {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr);
-                white-space: normal;
-                width: auto;
-                min-width: 600px;
-                padding: 1rem;
-                gap: 1rem;
-                li {
-                  display: block;
-                }
               }
             }
           }
